Closed Bug 1430700 Opened 8 years ago Closed 8 years ago

regression: SVGs are invisible on web.whatsapp.com after switching tabs

Categories

(Core :: Graphics: WebRender, defect, P1)

x86_64
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla59
Tracking Status
firefox-esr52 --- unaffected
firefox57 --- unaffected
firefox58 --- unaffected
firefox59 --- disabled

People

(Reporter: jan, Assigned: sotaro)

References

(Blocks 1 open bug, )

Details

(Keywords: nightly-community, regression)

Attachments

(1 file, 1 obsolete file)

Noticed on https://web.whatsapp.com. https://www.w3schools.com/graphics/tryit.asp?filename=trysvg_circle Open another tab, switch back. The red circle went away (bug). Click into the right half of the website to show it. mozregression --good 2018-01-14 --bad 2018-01-16 --pref gfx.webrender.all:true layout.display-list.retain:false startup.homepage_welcome_url:"https://www.w3schools.com/graphics/tryit.asp?filename=trysvg_circle" > 4:09.76 INFO: Last good revision: 52397f10a40b2dc2c2e07440e1b9c986eec112fa > 4:09.76 INFO: First bad revision: 3ae6cbde5225f24eb512aff7acba6be65efd29ec > 4:09.76 INFO: Pushlog: > https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=52397f10a40b2dc2c2e07440e1b9c986eec112fa&tochange=3ae6cbde5225f24eb512aff7acba6be65efd29ec > 3ae6cbde5225 sotaro — Bug 1429694 - Fix WebRenderLayerManager::ClearCachedResources r=nical
Has Regression Range: --- → yes
Has STR: --- → yes
Summary: regression: SVGs insible on web.whatsapp.com after switching tabs → regression: SVGs are invisible on web.whatsapp.com after switching tabs
Assignee: nobody → sotaro.ikeda.g
It seems that we need to add ClearCachedResources() to WebRenderFallbackData.
Implement WebRenderFallbackData::ClearCachedResources() to handle ClearCachedResources() correctly.
Attachment #8942825 - Flags: review?(nical.bugzilla)
Comment on attachment 8942825 [details] [diff] [review] patch - Implement WebRenderFallbackData::ClearCachedResources() Review of attachment 8942825 [details] [diff] [review]: ----------------------------------------------------------------- I didn't realize we were calling a virtual function in a destructor. It's one of the most error prone things in C++ and a very common source of bugs. Please move the implementations of ClearCachedResources in non-virtual methods (that ClearCachedResource can call) and make sure to call the non-virtual methods in the destructors instead of the virtual ones. That will probably save us a weird bug in a year or so by the time we forget about this.
Apply the comment.
Attachment #8942825 - Attachment is obsolete: true
Attachment #8942825 - Flags: review?(nical.bugzilla)
Attachment #8943082 - Flags: review?(nical.bugzilla)
Comment on attachment 8943082 [details] [diff] [review] patch - Implement WebRenderFallbackData::ClearCachedResources() Review of attachment 8943082 [details] [diff] [review]: ----------------------------------------------------------------- Thanks!
Attachment #8943082 - Flags: review?(nical.bugzilla) → review+
Pushed by sikeda@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/524088f8b35c Implement WebRenderFallbackData::ClearCachedResources() r=nical
Blocks: 1431283
No longer blocks: 1431283
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Verified fixed in Nightly 59 x64 20180118220148 de_DE @ Debian Testing (KDE, Radeon RX480). Thank you! :)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: