Bug 1430700 - Implement WebRenderFallbackData::ClearCachedResources() r=nical